# tutor

./: .gitignore  .mcp.json  CLAUDE.md  README.md  cheat-sheet-analysis.tex  cheat-sheet-calculus.md  cheat-sheet-calculus.tex  install.ps1  install.sh  pyproject.toml  user.config.example.json
.claude/: PRIMER.md  settings.local.json  teach.md
.claude/agents/: lecturer.md  note-taker.md  problem-solver.md  scientia-compiler.md
.claude/commands/: check.md  doctor.md  hint.md  map.md  practice.md  scientia.md  setup.md  skip.md  study.md  teach.md
.claude/knowledge/: calculus-past-paper-errata.md  course-context.md  course-map.json  course-map.md  known-ids.md  scientia-index.json  scientia-workflow.md
src/tutor/: auth.py  blackboard.py  cli.py  config.py  course_map.py  doctor.py  exams_scraper.py  init.py  panopto.py  problems.py  scientia.py  shared.py  status.py  web.py
src/uni/: auth.py  blackboard.py  cli.py  config.py  panopto.py
subjects/analysis/: last-done.md
subjects/calculus/: last-done.md
subjects/linear-algebra/: last-done.md
tools/: bb_probe.py  bb_traffic.json
webui/: app.js  index.html  style.css
