[project]
name = "uni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Advit Arora", email = "advitarora2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.4",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
uni = "uni:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
